# festiva-ai-planner

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start.bat  start.sh
dashboard/: app.py
data/: knowledge.txt
docker/: Dockerfile  docker-compose.yml
docs/: PRD.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: BudgetChart.tsx  BudgetOverview.tsx  EventForm.tsx  ExportSection.tsx  Header.tsx  RiskSection.tsx  TimelineSection.tsx  VendorCards.tsx  WelcomeHero.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx
frontend/src/lib/: api.ts  parser.ts  types.ts  utils.ts
phase_1_data_ml/: train_engine.py
phase_2_nlp_rag/: ingest.py
phase_2_nlp_rag/faiss_index/: index.faiss  index.pkl
phase_3_agents/: event_plan_report.md  orchestrator.py
phase_4_deployment/: DEPLOYMENT.md  README.md  app.py  server.py
scripts/: ingest.sh  train.sh
src/festiva/: __init__.py  config.py
src/festiva/agents/: __init__.py  orchestrator.py
src/festiva/api/: main.py  schemas.py
src/festiva/api/routes/: budget.py  knowledge.py  plans.py
src/festiva/ml/: __init__.py  training.py
src/festiva/rag/: __init__.py  ingest.py
tests/: __init__.py  conftest.py  test_api.py  test_ml.py
