[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "festiva-ai-planner"
version = "1.0.0"
description = "AI-powered event planning platform for Bengaluru"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Festiva Team"}
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
    "langchain>=0.2.0",
    "langchain-google-genai>=1.0.0",
    "langchain-huggingface>=0.0.3",
    "langchain-community>=0.2.0",
    "langchain-text-splitters>=0.2.0",
    "google-generativeai>=0.5.0",
    "faiss-cpu>=1.7.4",
    "sentence-transformers>=2.2.0",
    "scikit-learn>=1.3.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "streamlit>=1.28.0",
    "plotly>=5.18.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
]

[project.scripts]
festiva-server = "festiva.api.main:start"
festiva-train = "festiva.ml.training:main"
festiva-ingest = "festiva.rag.ingest:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
